# Wholesale

./: .env.example  .gitignore  README.md  package.json  render.yaml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_foundation.py  0002_rbac_permissions.py  0003_public_intake_records.py  0004_duplicate_detection.py  0005_speed_to_lead_tasks.py  0006_conversion_events.py  0007_lead_acquisition_fields.py  0008_communication_records.py  0009_appointments.py  0010_underwriting_versions.py  (+43 more)
apps/api/app/: __init__.py  main.py  worker.py
apps/api/tests/: conftest.py  test_acquisition_operations.py  test_ai_automation.py  test_ai_control.py  test_ai_copilots.py  test_ai_costs.py  test_ai_evaluation_library.py  test_ai_orchestrator.py  test_ai_runtime.py  test_bootstrap.py  test_buyers.py  test_call_intelligence.py  test_campaign_management.py  test_communication_simulator.py  test_demo_data.py  test_dispositions.py  test_email.py  test_email_simulator.py  test_field_operations.py  test_field_workflows.py  test_finance.py  test_health.py  test_inbox.py  test_lead_manager_copilot.py  test_leads.py  test_management_copilots.py  test_marketing.py  test_me.py  test_openai_client.py  test_operating_controls.py  test_operating_model_foundation.py  test_operations.py  test_operations_alerts.py  test_prospecting_workbench.py  test_public_intake.py  test_rentcast_client.py  test_transaction_copilot.py  test_transactions.py  test_twilio_messaging.py  test_twilio_voice.py  (+1 more)
apps/worker/: pyproject.toml
apps/worker/worker/: main.py
(+332 files in other folders)
